--- a/pom.xml
+++ b/pom.xml
@@ -202,6 +202,11 @@
                 <artifactId>ethereumj-core</artifactId>
                 <version>1.7.0-SNAPSHOT</version>
             </dependency>
+            <dependency>
+                <groupId>info.picocli</groupId>
+                <artifactId>picocli</artifactId>
+                <version>2.3.0</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
     <dependencies>
@@ -243,6 +248,10 @@
                     <artifactId>logback-classic</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>info.picocli</groupId>
+            <artifactId>picocli</artifactId>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
