--- a/pom.xml
+++ b/pom.xml
@@ -223,6 +223,11 @@
                 <artifactId>jansi</artifactId>
                 <version>1.17</version>
             </dependency>
+            <dependency>
+                <groupId>joda-time</groupId>
+                <artifactId>joda-time</artifactId>
+                <version>2.9.9</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
     <dependencies>
@@ -268,6 +273,10 @@
         <dependency>
             <groupId>org.fusesource.jansi</groupId>
             <artifactId>jansi</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
