--- a/pom.xml
+++ b/pom.xml
@@ -166,7 +166,7 @@
             <dependency>
                 <groupId>org.web3j</groupId>
                 <artifactId>core</artifactId>
-                <version>3.3.1</version>
+                <version>3.3.2-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <!-- else we cannot read the key files anymore -->
