--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <name>Ethereum Tool</name>
     <groupId>be.e-contract</groupId>
@@ -62,7 +64,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.20.1</version>
+                    <version>2.21.0</version>
                     <configuration>
                         <trimStackTrace>false</trimStackTrace>
                     </configuration>
@@ -105,7 +107,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
                 <configuration>
-                    <goals>install</goals>
                     <autoVersionSubmodules>true</autoVersionSubmodules>
                 </configuration>
             </plugin>
@@ -161,6 +162,17 @@
         <connection>scm:git:e-contract.be:git/ethereum-tool.git</connection>
         <tag>HEAD</tag>
     </scm>
+    <distributionManagement>
+        <downloadUrl>https://www.e-contract.be/maven2/be/e-contract/ethereum-tool/</downloadUrl>
+        <repository>
+            <id>e-contract-deploy</id>
+            <url>sftp://192.168.100.1/maven2</url>
+            <uniqueVersion>false</uniqueVersion>
+        </repository>
+    </distributionManagement>
+    <issueManagement>
+        <url>https://github.com/e-Contract/ethereum-tool/issues</url>
+    </issueManagement>
     <dependencyManagement>
         <dependencies>
             <dependency>
