--- a/pom.xml
+++ b/pom.xml
@@ -178,7 +178,7 @@
             <dependency>
                 <groupId>org.web3j</groupId>
                 <artifactId>core</artifactId>
-                <version>3.3.2-econtract-1</version>
+                <version>3.4.0</version>
             </dependency>
             <dependency>
                 <!-- else we cannot read the key files anymore -->
