--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <name>Ethereum Tool</name>
     <groupId>be.e-contract</groupId>
     <artifactId>ethereum-tool</artifactId>
-    <version>1.0.5-SNAPSHOT</version>
+    <version>1.0.5</version>
     <inceptionYear>2018</inceptionYear>
     <organization>
         <name>e-Contract.be BVBA</name>
@@ -158,7 +158,7 @@
     </properties>
     <scm>
         <connection>scm:git:e-contract.be:git/ethereum-tool.git</connection>
-        <tag>HEAD</tag>
+        <tag>ethereum-tool-1.0.5</tag>
     </scm>
     <distributionManagement>
         <downloadUrl>https://www.e-contract.be/maven2/be/e-contract/ethereum-tool/</downloadUrl>
