--- a/pom.xml
+++ b/pom.xml
@@ -191,12 +191,12 @@
             <dependency>
                 <groupId>org.web3j</groupId>
                 <artifactId>core</artifactId>
-                <version>4.9.5</version>
+                <version>4.9.8-hotfix</version>
             </dependency>
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-databind</artifactId>
-                <version>2.14.1</version>
+                <version>2.18.1</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.commons</groupId>
